--- a/index.html
+++ b/index.html
@@ -15,40 +15,55 @@
 <body>
   <main>
     <img src="./images/illustration-woman-online-mobile.svg" alt="Woman Illustration" class="illustration-img">
-    <!-- <img src="./images/bg-pattern-mobile.svg" alt="Bg Pattern" class="bg-pattern"> -->
-    <!-- <div class="header-img-mobile">
-    </div> -->
+    <img src="./images/bg-pattern-mobile.svg" alt="Bg Pattern" class="bg-pattern">
 
     <h1 class="faq-title">FAQ</h1>
 
     <div class="faq-container">
-      <h2 class="faq-question">How many team members can I invite?</h2>
+      <div class="faq-question-container">
+        <h2 class="faq-question">How many team members can I invite?</h2>
+        <img src="./images/icon-arrow-down.svg" alt="Arrow Icon" class="icon-arrow">
+      </div>
       <p class="faq-answer"> You can invite up to 2 additional users on the Free plan. There is no limit on team members
         for the Premium plan.</p>
     </div>
 
     <div class="faq-container">
-      <h2 class="faq-question">What is the maximum file upload size?</h2>
+      <div class="faq-question-container">
+        <h2 class="faq-question">What is the maximum file upload size?</h2>
+        <img src="./images/icon-arrow-down.svg" alt="Arrow Icon" class="icon-arrow">
+      </div>
       <p class="faq-answer">No more than 2GB. All files in your account must fit your allotted storage space.</p>
     </div>
 
     <div class="faq-container">
-      <h2 class="faq-question">How do I reset my password?</h2>
+      <div class="faq-question-container">
+        <h2 class="faq-question">How do I reset my password?</h2>
+        <img src="./images/icon-arrow-down.svg" alt="Arrow Icon" class="icon-arrow">
+      </div>
       <p class="faq-answer">Click “Forgot password” from the login page or “Change password” from your profile page.
         A reset link will be emailed to you.</p>
     </div>
 
     <div class="faq-container">
-      <h2 class="faq-question">Can I cancel my subscription?</h2>
+      <div class="faq-question-container">
+        <h2 class="faq-question">Can I cancel my subscription?</h2>
+        <img src="./images/icon-arrow-down.svg" alt="Arrow Icon" class="icon-arrow">
+      </div>
       <p class="faq-answer">Yes! Send us a message and we’ll process your request no questions asked.</p>
     </div>
 
     <div class="faq-container">
-      <h2 class="faq-question">Do you provide additional support?</h2>
+      <div class="faq-question-container">
+        <h2 class="faq-question">Do you provide additional support?</h2>
+        <img src="./images/icon-arrow-down.svg" alt="Arrow Icon" class="icon-arrow">
+      </div>
       <p class="faq-answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.
       </p>
     </div>
   </main>
+
+  <script src="js/script.js"></script>
 </body>
 
 </html>
