--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="hsl(273, 75%, 66%)">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,6 +17,9 @@
   <main>
     <div class="img-container">
       <img src="./images/illustration-woman-online-mobile.svg" alt="Woman Illustration" class="illustration-img">
+      <img src="./images/illustration-woman-online-desktop.svg" alt="Woman Illustration Desktop"
+        class="illustration-img-large">
+      <img src="./images/illustration-box-desktop.svg" alt="Box Illustration" class="box">
     </div>
 
     <div class="faq">
