added active state

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <title>Frontend Mentor | FAQ Accordion Card</title>
 </head>
@@ -22,7 +22,7 @@
       <img src="./images/illustration-box-desktop.svg" alt="Box Illustration" class="box">
     </div>
 
-    <div class="faq">
+    <div class="faq" id="faq">
       <h1 class="faq-title">FAQ</h1>
 
       <div class="faq-container">
